--- a/_posts/2024-08-23-malice.md
+++ b/_posts/2024-08-23-malice.md
@@ -24,7 +24,7 @@ It is also one of two movies with the dubious distinction of having Mr. Sorkin c
 
 > HARRIS: Forensics says it was the same man who raped Cara Latham.
 > 
-> ANDY: Did you really need a forensics expert to tel you that?
+> ANDY: Did you really need a forensics expert to tell you that?
 
 Yes, Andy, it's the only way to rule out a copycat, you pretentious prick.
 
@@ -92,7 +92,7 @@ That sounds like a malpractice suit waiting to happen!
 > 
 > JED: ... Excuse me?
 > 
-> ANDY: We were to high school together.
+> ANDY: We went to high school together.
 > 
 > JED: You're kidding me!
 > 
@@ -149,7 +149,7 @@ Suuuuuuuuure, you are...
 
 I wouldn't count on that.
 
-> ANDY: You know in street clothes, Helen looks positively masculine.
+> ANDY: You know, in street clothes, Helen looks positively masculine.
 
 Hey, man, don't knock Helen for being genderfluid!
 
@@ -227,7 +227,7 @@ Hey, you're lucky she's not treating you like the five-year-olds she was dealing
 
 > ANDY: He's a brilliant doctor.
 > 
-> TRACY: I know. I know he's brilliant, Andy. I can tell by the way the nursing staff genuflect when he walked down the hallway.
+> TRACY: I know. I know he's brilliant, Andy. I can tell by the way the nursing staff genuflect when he walks down the hallway.
 
 Oo, dictionary time! Genuflect: "lower one's body briefly by bending one knee to the ground, typically in worship or as a sign of respect."
 
@@ -235,7 +235,7 @@ Oo, dictionary time! Genuflect: "lower one's body briefly by bending one knee to
 
 Bring me the finest foreshadowing in all the land.<sup>foreshadowing detected</sup>
 
-> TRACY: Andy, please tell me you didn't say anything to Jed, please tell me you didn't share my problems with him.
+> TRACY: Andy, please tell me you didn't say anything to Jed, please tell me you didn't share my problem with him.
 > 
 > ANDY: _(pause)_ It came up.
 > 
@@ -577,7 +577,7 @@ And now we get into a deposition scene! We're back home, folks!
 > 
 > KESSLER: No.
 > 
-> RILEY: Well not?
+> RILEY: Why not?
 
 "Well, for one, he wouldn't stop talking about his bodily fluids..."
 
@@ -664,7 +664,7 @@ Sideshow? You mean this isn't the main plot? Come on, this movie's spaghetti eno
 > 
 > RILEY: We talked to the bartender of a place called Prince William Tavern.
 > 
-> TRACY: Ask "God" how many shots of bourdon he had before he cut me open.
+> TRACY: Ask "God" how many shots of bourbon he had before he cut me open.
 
 "I can't, he doesn't exist — wait, that's not what you meant."
 
