--- a/_posts/2024-08-23-malice.md
+++ b/_posts/2024-08-23-malice.md
@@ -149,6 +149,8 @@ Suuuuuuuuure, you are...
 
 I wouldn't count on that.
 
+### NEW Dialogue Motif: Gender-bender sarcasm
+
 > ANDY: You know, in street clothes, Helen looks positively masculine.
 
 Hey, man, don't knock Helen for being genderfluid!
