correct TB link

--- a/_posts/2024-10-04-sports-night-102.md
+++ b/_posts/2024-10-04-sports-night-102.md
@@ -121,7 +121,7 @@ Do you suppose the pitcher just sneezed?
 
 Sarcasm, thy name is Dana, indeed.
 
-For those of you who did a double-take like I did on seeing the name "Tom Brady" in the opening credits — no, it's [not the same guy](https://www.imdb.com/title/tt0707448/fullcredits/?ref_=tt_cl_sm). <sub>Thank fuck...</sub>
+For those of you who did a double-take like I did on seeing the name "Tom Brady" in the opening credits — no, it's [not the same guy](https://www.imdb.com/name/nm0103744/?ref_=ttfc_fc_cr). <sub>Thank fuck...</sub>
 
 > CASEY: I'm concerned about this sense, this sense in everything that's written about the two of us that Dan is cool and that I am... what is the word?
 > 
